syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
 
option go_package = "github.com/dubass83/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank Project";
    version: "1.0";
    contact: {
      name: "Dubass83";
      url: "https://github.com/dubass83/simplebank";
      email: "makssych@example.com";
    };
    // license: {
    //   name: "BSD 3-Clause License";
    //   url: "https://github.com/grpc-ecosystem/grpc-gateway/blob/main/LICENSE";
    // };
    // extensions: {
    //   key: "x-something-something";
    //   value {string_value: "yadda"}
    // }
  };
};

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
    }
}